--- a/PersonalDump/home.html
+++ b/PersonalDump/home.html
@@ -4,14 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="decoration.png">
 </head>
 <body>
-    <div class = "">
+    <div class = "box1">
     <form action="https://formsubmit.co/xxhmod.com@gmail.com" method="POST">
-        <input type="text" name="name" required>
-        <input type="email" name="email" required>
+        <h1>Contact Us</h1>
+        <label for = "name">Name</label>
+        <input type="text" name="name" required> <br>
+        <label for = "email">Email</label>
+        <input type="email" name="email" required> <br>
         <button type="submit">Send</button>
    </form>
+      </div>
+
+      <div class = "box2">
+        <form action="https://formsubmit.co/xxhmod.com@gmail.com" method="POST">
+            <h1>FeedBack</h1>
+            <label for = "name">Name</label>
+            <input type="text" name="name" required> <br>
+            <label for = "email">Email</label>
+            <input type="email" name="email" required> <br>
+            <button type="submit">Send</button> <br> <br>
+            <label for = "feedback">Feedback</label>
+            <textarea name="feedback" id="feedback" row = ""></textarea>
+       </form>
       </div>
    <a href="cart.html">Click me</a>
 </html>
