--- a/PersonalDump/home.html
+++ b/PersonalDump/home.html
@@ -19,17 +19,7 @@
    </form>
       </div>
 
-      <div class = "box2">
-        <form action="https://formsubmit.co/xxhmod.com@gmail.com" method="POST">
-            <h1>FeedBack</h1>
-            <label for = "name">Name</label>
-            <input type="text" name="name" required> <br>
-            <label for = "email">Email</label>
-            <input type="email" name="email" required> <br>
-            <button type="submit">Send</button> <br> <br>
-            <label for = "feedback">Feedback</label>
-            <textarea name="feedback" id="feedback" row = ""></textarea>
-       </form>
-      </div>
+      <a href="Form.html">FeedBack</a>
+      <br> <br>
    <a href="cart.html">Click me</a>
 </html>
